--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en-GB">
 <!-- Write your HTML in this file -->
+<head>
+
+</head>
+
+<body> 
+    <h1>
+        Hello, World!
+    </h1>
+</body>
+
+
+</html>
+
